infra/k8s/admin-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admin-api
  labels:
    trust.codedang.com/rabbitmq: 'true'
