infra/k8s/admin-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
  namespace: admin-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: admin-api
          image: ghcr.io/skkuding/codedang-admin-api
          resources:
            limits:
              cpu: 1
              memory: 1.5Gi
            requests:
              cpu: 0.2
              memory: 200Mi
          startupProbe:
            httpGet:
              path: /health/ready
              port: 3000
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ['sh', '-c', 'sleep 5']
          volumeMounts:
            - name: rabbitmq-ca
              mountPath: /etc/codedang/certs
              readOnly: true

      volumes:
        - name: rabbitmq-ca
          configMap:
            name: rabbitmq-ca-cert
            items:
              - key: ca.crt
                path: ca.crt
