infra/k8s/admin-api/base/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-api-server-gateway
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - stage.codedang.com
  rules:
  - matches:
    - path:
        type: Prefix
        value: /graphql
    backendRefs:
    - name: admin-api-server
      port: 3000

  - matches:
    - path:
        type: Prefix
        value: /admin-api
    backendRefs:
    - name: admin-api-server
      port: 3000
