infra/k8s/admin-api/base/TLSRedirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-api-tls-redirect
  namespace: admin-api
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - codedang.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 8443
